# Forge-Mod-Injector

./: CMakeLists.txt  LICENSE  README.md
ForgeModInjector/: CMakeLists.txt  ForgeModInjector.c  Injector.c  Injector.h  WinAPIDefs.h
ForgeModInjector/resources/: ForgeModInjector.manifest
InMemory/: CacheClassLoader.java  CacheURLConnection.java  CacheURLStreamHandler.java  UnsafeBufferInputStream.java
Injector/: CMakeLists.txt  Entry.c  Entry.h  Filesystem.c  Filesystem.cpp  Filesystem.h  Injector.c  Injector.h
Mod/: build.gradle.kts  gradle.properties  settings.gradle.kts
Mod/gradle/wrapper/: gradle-wrapper.properties
Mod/src/main/java/net/sxlver/injectedmod/: InjectedMod.java
Payload/: CMakeLists.txt  Defs.h  Export.h  ForgeLoader.cpp  ForgeLoader.h  JVMUtil.cpp  JVMUtil.h  JarTraversal.c  JarTraversal.cpp  JarTraversal.h  JavaObjects.cpp  Payload.cpp  Payload.h  StringUtil.cpp  StringUtil.h  Util.cpp  Util.h
Shared/: CMakeLists.txt  PayloadParameters.h  Shared.c  Shared.cpp  Shared.h  WinAPIDebugPrint.h
Tests/: CMakeLists.txt  JarTraversalTest.cpp
